--- a/Jour2_version_2023.Rmd
+++ b/Jour2_version_2023.Rmd
@@ -2,7 +2,7 @@
 title: "L'ouverture des données publiques culturelles en pratique"
 subtitle: "Ministère de la Culture"
 author: "Datactivist - Anne-Laure Donzel"
-date: "Juin 2023"
+date: "Novembre 2023"
 output:
   SlidesDatactivist::moon_reader:
     css: [default, datactivist, datactivist-fonts]
